# glade_bindings

./: meson.build
examples/: meson.build
examples/bind_glade_example/: main.d  meson.build  ui.gresource.xml  window.ui
src/: meson.build
src/glade/: builder_bindings.d  package.d
